fix: simplificar Dockerfile

--- a/backend-vevil/Dockerfile
+++ b/backend-vevil/Dockerfile
@@ -1,12 +1,12 @@
-# ---- Build Stage ----
-FROM node:20-alpine AS builder
+# Dockerfile simplificado para NestJS
+FROM node:20-alpine
 
 WORKDIR /app
 
 # Copiar archivos de dependencias
 COPY package*.json yarn.lock ./
 
-# Instalar dependencias
+# Instalar TODAS las dependencias (incluyendo devDependencies para el build)
 RUN yarn install --frozen-lockfile
 
 # Copiar código fuente
@@ -15,24 +15,14 @@ COPY . .
 # Compilar TypeScript
 RUN yarn build
 
-# ---- Production Stage ----
-FROM node:20-alpine AS production
-
-WORKDIR /app
-
-# Copiar solo lo necesario para producción
-COPY package*.json yarn.lock ./
-RUN yarn install --production --frozen-lockfile
-
-# Copiar el build compilado
-COPY --from=builder /app/dist ./dist
-
 # Crear carpeta uploads
 RUN mkdir -p uploads
+
+# Limpiar devDependencies después del build
+RUN yarn install --production --frozen-lockfile
 
 # Exponer puerto
 EXPOSE 3000
 
 # Comando de inicio
-CMD ["node", "dist/main"]
-
+CMD ["node", "dist/main.js"]
