debug: agregar logging al Dockerfile

--- a/backend-vevil/Dockerfile
+++ b/backend-vevil/Dockerfile
@@ -1,4 +1,4 @@
-# Dockerfile simplificado para NestJS
+# Dockerfile para NestJS
 FROM node:20-alpine
 
 WORKDIR /app
@@ -6,20 +6,23 @@ WORKDIR /app
 # Copiar archivos de dependencias
 COPY package*.json yarn.lock ./
 
-# Instalar TODAS las dependencias (incluyendo devDependencies para el build)
+# Instalar TODAS las dependencias
 RUN yarn install --frozen-lockfile
 
 # Copiar código fuente
 COPY . .
 
+# Verificar que los archivos existen
+RUN echo "=== Archivos en src ===" && ls -la src/
+
 # Compilar TypeScript
 RUN yarn build
 
+# Verificar que el build generó archivos
+RUN echo "=== Archivos en dist ===" && ls -la dist/ || echo "dist no existe!"
+
 # Crear carpeta uploads
 RUN mkdir -p uploads
-
-# Limpiar devDependencies después del build
-RUN yarn install --production --frozen-lockfile
 
 # Exponer puerto
 EXPOSE 3000
