--- a/backend-vevil/Dockerfile
+++ b/backend-vevil/Dockerfile
@@ -2,7 +2,7 @@ FROM node:20-alpine
 
 WORKDIR /app
 
-# Instalar dependencias del sistema necesarias para bcrypt
+# Instalar dependencias del sistema
 RUN apk add --no-cache python3 make g++
 
 # Copiar archivos de dependencias
@@ -14,15 +14,19 @@ RUN yarn install
 # Copiar todo el código
 COPY . .
 
-# Compilar con npx directamente (evita problemas con nest cli)
-RUN npx nest build
+# DEBUG: Ver contenido de src
+RUN echo "=== Contenido de /app ===" && ls -la
+RUN echo "=== Contenido de /app/src ===" && ls -la src/
+
+# Compilar con tsc directamente
+RUN ./node_modules/.bin/tsc -p tsconfig.build.json
+
+# DEBUG: Ver si se generó dist
+RUN echo "=== Contenido de /app/dist ===" && ls -la dist/ && ls -la dist/
 
 # Crear carpeta uploads
 RUN mkdir -p uploads
 
-# Exponer puerto
 EXPOSE 3000
 
-# Iniciar la aplicación
 CMD ["node", "dist/main.js"]
-
