--- a/backend-vevil/package.json
+++ b/backend-vevil/package.json
@@ -39,6 +39,7 @@
     "typeorm": "^0.3.27"
   },
   "devDependencies": {
+    "typescript": "~5.4.5",
     "@nestjs/cli": "^11.0.12",
     "@nestjs/schematics": "^10.1.3",
     "@nestjs/testing": "^10.3.10",
