fix: Dockerfile con debug

--- a/backend-vevil/Dockerfile
+++ b/backend-vevil/Dockerfile
@@ -1,27 +1,12 @@
 FROM node:20-slim
-
-# Instalar dependencias del sistema para bcrypt
 RUN apt-get update && apt-get install -y python3 make g++ && rm -rf /var/lib/apt/lists/*
-
 WORKDIR /app
-
-# Copiar package.json y package-lock.json
 COPY package.json package-lock.json ./
-
-# Instalar dependencias con npm
-RUN npm ci
-
-# Copiar código fuente
+RUN npm install
 COPY . .
-
-# Compilar TypeScript
-RUN npm run build
-
-# Verificar que dist existe
-RUN ls -la dist/
-
-# Puerto
+RUN echo "=== Archivos en /app ===" && ls -la
+RUN echo "=== tsconfig.build.json ===" && cat tsconfig.build.json
+RUN node ./node_modules/typescript/bin/tsc -p tsconfig.build.json 2>&1 || echo "TSC ERROR"
+RUN echo "=== Verificando dist ===" && ls -la dist/ || echo "DIST NO EXISTE"
 EXPOSE 3000
-
-# Iniciar
 CMD ["node", "dist/main.js"]
