fix: usar nest build para resolver path aliases

--- a/backend-vevil/Dockerfile
+++ b/backend-vevil/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /app
 # Copiar package.json
 COPY backend-vevil/package*.json ./
 
-# Instalar TODAS las dependencias (incluyendo dev para compilar)
+# Instalar TODAS las dependencias
 RUN npm install
 
 # Copiar código fuente
@@ -13,10 +13,10 @@ COPY backend-vevil/src ./src
 COPY backend-vevil/tsconfig*.json ./
 COPY backend-vevil/nest-cli.json ./
 
-# Compilar TypeScript
-RUN npx tsc -p tsconfig.build.json
+# Compilar con NestJS (resuelve path aliases)
+RUN npm run build
 
-# Verificar que existe
+# Verificar
 RUN ls -la dist/
 
 EXPOSE 3000
