--- a/frontend-vevil/package.json
+++ b/frontend-vevil/package.json
@@ -8,45 +8,26 @@
   },
   "scripts": {
     "dev": "vite --force",
-    "build": "tsc -b && vite build",
+    "build": "vite build",
     "build-only": "vite build",
-    "type-check": "tsc --noEmit",
-    "lint:oxlint": "oxlint . --fix -D correctness --ignore-path .gitignore",
-    "lint:eslint": "eslint . --fix --cache",
-    "lint": "run-s lint:*",
+    "preview": "vite preview",
+    "lint": "eslint .",
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@primevue/themes": "^4.4.1",
     "axios": "^1.7.2",
-    "pinia": "^2.1.7",
-    "primeicons": "^7.0.0",
-    "primevue": "^4.4.1",
-    "vue": "^3.4.27",
-    "vue-router": "^4.3.2"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.0"
   },
   "devDependencies": {
-    "@playwright/test": "^1.44.1",
-    "@rushstack/eslint-patch": "^1.10.3",
-    "@tsconfig/node18": "^18.2.4",
-    "@types/jsdom": "^21.1.7",
     "@types/node": "^18.19.33",
-    "@vitejs/plugin-vue": "^5.0.5",
-    "@vitejs/plugin-vue-jsx": "^3.1.0",
-    "@vue/eslint-config-prettier": "^9.0.0",
-    "@vue/eslint-config-typescript": "^13.0.0",
-    "@vue/test-utils": "^2.4.6",
-    "@vue/tsconfig": "^0.5.1",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^8.57.0",
-    "eslint-plugin-playwright": "^1.6.2",
-    "eslint-plugin-vue": "^9.26.0",
-    "jsdom": "^24.1.0",
-    "npm-run-all2": "^6.2.0",
     "prettier": "^3.3.0",
     "typescript": "~5.4.5",
-    "vite": "^5.2.12",
-    "vite-plugin-vue-devtools": "^7.2.1",
-    "vitest": "^1.6.0",
-    "vue-tsc": "^2.0.19"
+    "vite": "^5.2.12"
   }
 }
