--- a/frontend-vevil/vercel.json
+++ b/frontend-vevil/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "yarn build",
+  "buildCommand": "npm run build",
   "outputDirectory": "dist",
   "framework": "vite",
   "rewrites": [
