--- a/backend-vevil/package.json
+++ b/backend-vevil/package.json
@@ -7,9 +7,9 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
-    "start": "node dist/main",
+    "start": "node dist/src/main.js",
     "start:dev": "nest start --watch --preserveWatchOutput -r tsconfig-paths/register",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/src/main.js",
     "seed:examples": "ts-node -r tsconfig-paths/register src/scripts/seed-example-data.ts",
     "seed:production": "ts-node -r tsconfig-paths/register src/scripts/seed.ts",
     "test": "jest",
